--- a/www/index.html
+++ b/www/index.html
@@ -9,36 +9,38 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h1>Kalkulačka</h1>
-    <div class="kalkulacka">
-        <div id="display">
-            <div id="main"></div>
-            <div id="sub"></div>
+    <div class="container">
+        <h1>Kalkulačka</h1>
+        <div class="kalkulacka">
+            <div id="display">
+                <div id="main"></div>
+                <div id="sub"></div>
+            </div>
+            <button id="%" value="%" onclick="">%</button>
+            <button id="CE" value="CE" onclick="vymazNum2()">CE</button>
+            <button id="C" value="C" onclick="vymaz()">C</button>
+            <button id="bcs" value="bcs" onclick="">BCS</button>
+            <button id="1x" onclick="">1/x</button>
+            <button id="x2" onclick="">x^2</button>
+            <button id="odmocnina" onclick="">√x</button>
+            <button id="deleno" onclick="del()">÷</button>
+            <button id="7" onclick="addNumber(7)">7</button>
+            <button id="8" onclick="addNumber(8)">8</button>
+            <button id="9" onclick="addNumber(9)">9</button>
+            <button id="krat" onclick="nasob()">×</button>
+            <button id="4" onclick="addNumber(4)">4</button>
+            <button id="5" onclick="addNumber(5)">5</button>
+            <button id="6" onclick="addNumber(6)">6</button>
+            <button id="minus" onclick="odecti()">-</button>
+            <button id="1" onclick="addNumber(1)">1</button>
+            <button id="2" onclick="addNumber(2)">2</button>
+            <button id="3" value="3" onclick="addNumber(3)">3</button>
+            <button id="+" onclick="secti()">+</button>
+            <button id="plusminus" onclick="">+/-</button>
+            <button id="nula" onclick="addNumber(0)">0</button>
+            <button id="dot" onclick="">,</button>
+            <button id="result" onclick="res()">=</button>
         </div>
-        <button id="%" value="%" onclick="function ">%</button>
-        <button id="CE" value="CE" onclick="">CE</button>
-        <button id="C" value="C" onclick="">C</button>
-        <button id="bcs" value="bcs" onclick="">BCS</button>
-        <button id="1x" onclick="">1/x</button>
-        <button id="x2" onclick="">x^2</button>
-        <button id="odmocnina" onclick="">√x</button>
-        <button id="deleno" onclick="">÷</button>
-        <button id="7" onclick="addNumber(7)">7</button>
-        <button id="8" onclick="addNumber(8)">8</button>
-        <button id="9" onclick="addNumber(9)">9</button>
-        <button id="krat" onclick="addNumber(3)">×</button>
-        <button id="4" onclick="addNumber(4)">4</button>
-        <button id="5" onclick="addNumber(5)">5</button>
-        <button id="6" onclick="addNumber(6)">6</button>
-        <button id="minus" onclick="">-</button>
-        <button id="1" onclick="addNumber(1)">1</button>
-        <button id="2" onclick="addNumber(2)">2</button>
-        <button id="3" value="3" onclick="addNumber(3)">3</button>
-        <button id="+" onclick="">+</button>
-        <button id="plusminus" onclick="secti()">+/-</button>
-        <button id="0" onclick="addNumber(0)">0</button>
-        <button id="dot" onclick="">,</button>
-        <button id="result" onclick="">=</button>
     </div>
 </body>
 </html>
