Trigger funkcí přes jquery

--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
     <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="/jquery.js"></script>
     <script src="/script.js"></script>
     <link rel="stylesheet" href="/style.css">
 </head>
@@ -17,30 +18,30 @@
                     <div id="main"></div>
                     <div id="sub"></div>
                 </div>
-            <button id="%" value="%" onclick="">%</button>
-            <button id="CE" value="CE" onclick="vymazNum2()">CE</button>
-            <button id="C" value="C" onclick="vymaz()">C</button>
-            <button id="bcs" value="bcs" onclick="">BCS</button>
-            <button id="1x" onclick="zlomkovac()">1/x</button>
-            <button id="x2" onclick="umocnit()">x^2</button>
-            <button id="odmocnina" onclick="odmocnit()">√x</button>
-            <button id="deleno" onclick="del()">÷</button>
-            <button id="7" onclick="addNumber(7)">7</button>
-            <button id="8" onclick="addNumber(8)">8</button>
-            <button id="9" onclick="addNumber(9)">9</button>
-            <button id="krat" onclick="nasob()">×</button>
-            <button id="4" onclick="addNumber(4)">4</button>
-            <button id="5" onclick="addNumber(5)">5</button>
-            <button id="6" onclick="addNumber(6)">6</button>
-            <button id="minus" onclick="odecti()">-</button>
-            <button id="1" onclick="addNumber(1)">1</button>
-            <button id="2" onclick="addNumber(2)">2</button>
-            <button id="3" value="3" onclick="addNumber(3)">3</button>
-            <button id="+" onclick="secti()">+</button>
-            <button id="plusminus" onclick="">+/-</button>
-            <button id="nula" onclick="addNumber(0)">0</button>
-            <button id="dot" onclick="addNumber('.')">,</button>
-            <button id="result" onclick="res()">=</button>
+            <button id="%" value="%" >%</button>
+            <button id="CE" value="CE" >CE</button>
+            <button id="C" value="C" >C</button>
+            <button id="bcs" value="bcs" >BCS</button>
+            <button id="1x" >1/x</button>
+            <button id="x2" >x^2</button>
+            <button id="odmocnina" >√x</button>
+            <button id="deleno" >÷</button>
+            <button id="seven" >7</button>
+            <button id="eight" >8</button>
+            <button id="nine" >9</button>
+            <button id="krat">×</button>
+            <button id="four" >4</button>
+            <button id="five" >5</button>
+            <button id="six">6</button>
+            <button id="minus">-</button>
+            <button id="one">1</button>
+            <button id="two">2</button>
+            <button id="three" value="3">3</button>
+            <button id="plus">+</button>
+            <button id="plusminus">+/-</button>
+            <button id="nula">0</button>
+            <button id="dot">,</button>
+            <button id="result">=</button>
         </div>
     </div>
 </body>
