--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Kalkulačka</h1>
+        <h1>jquery kalkulačka</h1>
+        <p>UI V 2.0</p>
         <div class="kalkulacka">
                 <div id="display">
                     <div id="main"></div>
