--- a/www/index.html
+++ b/www/index.html
@@ -12,8 +12,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>jquery kalkulačka</h1>
-        <p>UI V 2.0</p>
+        <header>
+            <h1>Jquery kalkulačka</h1>
+            <p>UI V 2.0</p>
+        </header>
         <div class="kalkulacka">
                 <div id="display">
                     <div id="main"></div>
